--- a/ToeicWeb/ToeicWeb.csproj
+++ b/ToeicWeb/ToeicWeb.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Customer\Data\" />
-    <Folder Include="wwwroot\admin\image\products\product\" />
+    <Folder Include="wwwroot\admin\image\" />
     <Folder Include="wwwroot\customer\css\" />
     <Folder Include="wwwroot\customer\images\" />
   </ItemGroup>
