--- a/ToeicWeb/appsettings.json
+++ b/ToeicWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server= ASUS\\SQLSQLSQL; Database = Toeic; Trusted_Connection = True; TrustServerCertificate = True"
+    "DefaultConnection": "Server= ASUS\\SQLSQLSQL; Database = ToeicWeb; Trusted_Connection = True; TrustServerCertificate = True"
   }
 }
