--- a/ToeicWeb/ToeicWeb.csproj
+++ b/ToeicWeb/ToeicWeb.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.3.1" />
     <PackageReference Include="ExcelDataReader" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0-preview.7.24406.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.0-preview.7.24406.2" />
@@ -22,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\adminn\upload\" />
     <Folder Include="wwwroot\customer\css\" />
     <Folder Include="wwwroot\customer\images\" />
   </ItemGroup>
