--- a/ToeicWeb/ToeicWeb.csproj
+++ b/ToeicWeb/ToeicWeb.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\adminn\upload\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.3.1" />
     <PackageReference Include="ExcelDataReader" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0-preview.7.24406.2" />
@@ -23,9 +27,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\adminn\upload\" />
     <Folder Include="wwwroot\customer\css\" />
     <Folder Include="wwwroot\customer\images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\adminn\upload\.editorconfig" />
   </ItemGroup>
 
 </Project>
