--- a/ToeicWeb/appsettings.json
+++ b/ToeicWeb/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server= ASUS\\SQLSQLSQL; Database = WebsiteToeic; Trusted_Connection = True; TrustServerCertificate = True"
+  },
+
+  "GoogleGemini": {
+    "ApiKey": "AIzaSyB4MlXnynZsr8L2Jp-W9qss-kscY4cwArQ"
   }
+  
+
+
 }
