--- a/ToeicWeb/ToeicWeb.csproj
+++ b/ToeicWeb/ToeicWeb.csproj
@@ -9,8 +9,11 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.3.1" />
     <PackageReference Include="ExcelDataReader" Version="3.7.0" />
+    <PackageReference Include="Google.Apis" Version="1.69.0" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.69.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0-preview.7.24406.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.0-preview.7.24406.2" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.7.24405.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0-preview.7.24405.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="9.0.0-preview.7.24405.3" />
@@ -28,6 +31,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Toeic.DataAccess\Toeic.DataAccess.csproj" />
+    <ProjectReference Include="..\Toeic.Models\Toeic.Models.csproj" />
     <ProjectReference Include="..\Toeic.Utility\Toeic.Utility.csproj" />
   </ItemGroup>
 
